--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "server": "npm start --prefix server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
+    "build": "npm install --prefix server && npx prisma generate --schema=server/prisma/schema.prisma && npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
