--- a/server/package.json
+++ b/server/package.json
@@ -12,16 +12,15 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@prisma/client": "6.4.0",
+    "@prisma/client": "^6.19.2",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "jsonwebtoken": "^9.0.3",
-    "tailadmin-1.0.0": "file:.."
+    "jsonwebtoken": "^9.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11",
-    "prisma": "6.4.0"
+    "prisma": "6.19.2"
   }
 }
