--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
       "destination": "/client/dist/assets/$1"
     },
     {
+      "source": "/TailAdmin/(.*)",
+      "destination": "/client/dist/index.html"
+    },
+    {
       "source": "/(.*)",
       "destination": "/client/dist/index.html"
     }
