--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,24 @@
 {
   "version": 2,
-  
+  "redirects": [
+    {
+      "source": "/",
+      "destination": "/TailAdmin/",
+      "permanent": false
+    }
+  ],
   "rewrites": [
     {
       "source": "/api/(.*)",
       "destination": "/server/index.js"
     },
     {
-      "source": "/assets/(.*)",
+      "source": "/TailAdmin/assets/(.*)",
       "destination": "/client/dist/assets/$1"
+    },
+    {
+      "source": "/TailAdmin/(.*)",
+      "destination": "/client/dist/index.html"
     },
     {
       "source": "/(.*)",
