--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,17 @@
 {
   "version": 2,
-  "redirects": [
-    {
-      "source": "/",
-      "destination": "/TailAdmin/signin",
-      "permanent": false
-    }
-  ],
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/server/index.js" },
-    { "source": "/TailAdmin/assets/(.*)", "destination": "/client/dist/assets/$1" },
-    { "source": "/TailAdmin/(.*)", "destination": "/client/dist/index.html" },
-    { "source": "/(.*)", "destination": "/client/dist/index.html" }
+    {
+      "source": "/api/(.*)",
+      "destination": "/server/index.js"
+    },
+    {
+      "source": "/assets/(.*)",
+      "destination": "/client/dist/assets/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/client/dist/index.html"
+    }
   ]
 }
