--- a/server/vercel.json
+++ b/server/vercel.json
@@ -4,6 +4,10 @@
     {
       "source": "/api/(.*)",
       "destination": "/index.js"
+    },
+    {
+      "source": "/",
+      "destination": "/index.js"
     }
   ]
 }
