--- a/server/vercel.json
+++ b/server/vercel.json
@@ -3,11 +3,11 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "/index.js"
+      "destination": "/src/index.js"
     },
     {
-      "source": "/",
-      "destination": "/index.js"
+      "source": "/(.*)",
+      "destination": "/src/index.js"
     }
   ]
 }
