--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node --no-warnings src/index.js",
-    "dev": "nodemon --no-warnings src/index.js"
+    "dev": "nodemon --no-warnings src/index.js",
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
