--- a/server/vercel.json
+++ b/server/vercel.json
@@ -17,14 +17,8 @@
       ]
     }
   ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "src/index.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "src/index.js"
-    }
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "src/index.js" },
+    { "source": "/(.*)", "destination": "src/index.js" }
   ]
 }
